sorted/tests/09-fully-qualified-sorted-attribute-on-match.stderr
error: Fmt(e) should sort before Io(e)
  --> tests/09-fully-qualified-sorted-attribute-on-match.rs:20:13
   |
20 |             Fmt(e) => write!(f, "{}", e),
   |             ^^^^^^
